# gnss-denied-localization

./: .gitignore  LICENSE  README.md  mast3rtest.py  pyproject.toml
notebooks/: 00_opencv-template-matching.ipynb  01_sift_ransac.ipynb  01_superpoint_lightglue.ipynb  04_loftr_magsac_kaggle_pipeline.ipynb  05_classical_cv_dense_localization.ipynb  06_edge_planar_localization.ipynb  07_loftr_magsac_edge_shadow_anchor_optuna.ipynb  08_superpoint_lightglue_magsac_gray_anchor_optuna.ipynb  10_feature_matching_tuning.ipynb  11_sp_lg_pair_localization_tuning.ipynb  13_colmap_train_reconstruction_camera_path.ipynb  14_sift_uav_corner_guided_two_view_v2.ipynb  15_sift_sfm_iterative_test_submission.ipynb  17_sift_sfm_class_pipeline.ipynb  submission.csv  test.ipynb
refine_matching/: analyze_matches.py  analyze_winter_conditions.py  apply_ensemble_offset.py  batch_analyze.py  collect_matches.py  compare_all_final.py  compare_all_methods.py  compare_matchers.py  compare_models.py  create_analysis_csv.py  ensemble_advanced.py  ensemble_all_models.py  ensemble_median.py  ensemble_new_top3.py  ensemble_rough_se2_roma.py  ensemble_top3_variants.py  extract_matches.py  generate_newtop3_test.py  generate_roma_y5_test.py  plot_error_vs_speed.py  plot_error_vs_yaw.py  plot_errors.py  plot_predictions_map.py  plot_test_trajectory.py  predict_error_from_speed.py  refine.py  test_fusion_strategies.py  test_linear_error_correction.py  test_one.py  test_one_fixed.py  test_predicted.csv  test_predicted_se2loftr.csv  test_refined_raw.csv  train_analysis.csv  train_predictions.csv  train_predictions_se2loftr.csv  train_refined_raw.csv  winter_analysis_results.csv
(+465 files in other folders)
